<resources>
    <string name="app_name">TravelAgencies</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="add_agency_button">Add Agency</string>
    <string name="agency_name">Agency Name:</string>
    <string name="start_date">Start Date    (DD/MM/YYYY)</string>
    <string name="end_date">End Date    (DD/MM/YYYY)</string>
    <string name="price">Price</string>
    <string name="country">Country</string>
    <string name="image_url">Image URL</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="street">Street</string>

    <string name="add_agency">Add Agency</string>
    <string name="no">No.</string>
    <string name="add_trip">Add Trip</string>
    <string name="home_button">home button</string>
    <string name="exitApp_button">Exit</string>
    <string name="title_activity_login">TravelAgencies</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pass_f_s">Forgot password?</string>
    <string name="reg">New member? <u>register</u></string>
    <string name="login">Login</string>
    <string name="stay_loged_in">Stay loged in</string>
    <string name="travelagencies">Travel Agencies</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="hello">"Hello, "</string>
    <string name="screamer">!</string>
</resources>
