<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/radialback"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.AddAgency_dialog"

    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"


    android:weightSum="1">

    <EditText
        android:id="@+id/NameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/countryEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:minWidth="250dp" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/streetEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="20"
                android:hint="@string/street" />

            <EditText
                android:id="@+id/houseNumberEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="10"
                android:ems="10"
                android:hint="@string/no"
                android:inputType="numberSigned" />
        </TableRow>

    </TableLayout>


    <EditText
        android:id="@+id/phoneNumber_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/addAgency_addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/add_agency_button"
        android:nestedScrollingEnabled="false"
        android:theme="@style/Base.AlertDialog.AppCompat.Light" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addAgencyProgressBar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeButton"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/home_icon"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:layout_marginTop="50dp"
        android:theme="@style/Base.AlertDialog.AppCompat.Light" />


</LinearLayout>
</ScrollView>
