<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddTripActivity"
    android:background="@drawable/radialback">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    android:weightSum="1">

    <EditText
        android:id="@+id/startDate_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/EndDate_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/end_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/TripPrice_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal" />


    <EditText
        android:id="@+id/TripCountry_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/country" />

    <EditText
        android:id="@+id/ImgURL_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_url"
        android:inputType="text" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/agencyID_spinner"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/agenciesSpinner_progressBar"
        android:layout_gravity="center_horizontal"
        android:progress="50" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_trip"
        android:id="@+id/AddTripDone_Button"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:padding="15dp"
        android:onClick="addTrip"
        android:nestedScrollingEnabled="true"
        />


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTripProgresBar"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_gravity="center"
        android:src="@mipmap/home_icon"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/home_button"
        android:onClick="homeButtonClick"
        />

</LinearLayout>
       </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
