<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:background="@drawable/radialback">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- ### Using a linear layout alone would make some parts of it inaccessible on small screens or when the keyboard is up,
                the conventional way to solve this is using a coordinator layout and a scroll view inside it.
                You'll also need to use one of the  appCompat themes or appTheme in order to use coordinator layout.
                -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="false"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="20dp"
    android:background="@drawable/radialback"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello"
        android:id="@+id/hello_textView"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp" />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/addAgency_openDialogButton"
    android:text="@string/add_agency"
    android:textSize="30sp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="10dp"
    android:padding="20dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addTrip_buttonClick"
        android:id="@+id/addTrip_button"
        android:text="@string/add_trip"
        android:textSize="30sp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:padding="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitApp_button"
        android:id="@+id/exitAppButton"
        android:textSize="40sp"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logoutButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="logout" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/mainProgressBar"
        android:progress="0"
        android:layout_marginTop="50dp"
        android:visibility="invisible" />

</LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
