<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".controller.LoginActivity"
    android:background="@drawable/radialback">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/travelagencies"
                android:id="@+id/app_title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:gravity="center_vertical|center"
                android:textColor="#ffffffff"
                android:textSize="50sp"
                android:typeface="normal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/userName_input"
                android:gravity="center_vertical|left|center_horizontal"
                android:textIsSelectable="false"
                android:minWidth="300dp"
                android:layout_below="@+id/app_title"
                android:layout_alignLeft="@+id/pass_input"
                android:layout_alignStart="@+id/pass_input"
                android:layout_marginTop="60dp"
                android:hint="@string/user_name"
                android:background="#ffffffff"
                android:drawableLeft="@drawable/fa_user"
                android:minHeight="20dp"
                android:padding="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pass_input"
                android:layout_below="@+id/userName_input"
                android:textColorHighlight="#ffffffff"
                android:textColorLink="#ffffffff"
                android:textIsSelectable="false"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/fa_unlock"
                android:hint="@string/password"
                android:gravity="center_vertical|left"
                android:background="#ffffffff"
                android:selectAllOnFocus="false"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="12dp"
                />

            <Button android:id="@+id/registerButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@android:color/white"
                android:textColor="@color/colorPrimary"
                android:minWidth="300dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:typeface="sans"
                android:layout_below="@+id/pass_input"
                android:layout_marginTop="100dp"
                android:layout_alignLeft="@+id/pass_input"
                android:layout_alignStart="@+id/pass_input"
                android:layout_alignRight="@+id/pass_input"
                android:layout_alignEnd="@+id/pass_input"
                android:onClick="logIn"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/reg"
                android:id="@+id/reg_link"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:layout_below="@+id/registerButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:onClick="startRegisterActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/email_error"
                android:layout_below="@+id/userName_input"
                android:layout_alignRight="@+id/userName_input"
                android:layout_alignEnd="@+id/userName_input"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/pass_error"
                android:layout_below="@+id/pass_input"
                android:layout_alignRight="@+id/email_error"
                android:layout_alignEnd="@+id/email_error"
                android:layout_marginTop="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stayLogedIn"
                android:checked="false"
                android:gravity="center_vertical|right"
                android:text="@string/stay_loged_in"
                android:textStyle="bold"
                android:layout_below="@+id/pass_error"
                android:layout_alignRight="@+id/app_title"
                android:layout_alignEnd="@+id/app_title"
                android:layout_marginRight="25dp" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginProgressBar"
                android:layout_below="@+id/registerButton"
                android:layout_marginTop="15dp"
                android:layout_alignEnd="@+id/pass_input"
                android:layout_alignStart="@+id/pass_input"
                android:layout_marginBottom="15dp"
                android:visibility="invisible" />


        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
